--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.6.0",
     "react-phone-number-input": "^3.4.13",
     "react-router-dom": "^7.9.6",
+    "simplebar-react": "^3.3.2",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
