--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@mui/material": "^7.3.5",
     "@mui/x-date-pickers": "^8.18.0",
     "@tailwindcss/vite": "^4.1.17",
+    "country-state-city": "^3.2.1",
     "dayjs": "^1.11.19",
     "formik": "^2.4.9",
     "framer-motion": "^12.23.24",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-phone-number-input": "^3.4.13",
+    "react-range": "^1.10.0",
     "react-router-dom": "^7.9.6",
+    "react-select": "^5.10.2",
     "simplebar-react": "^3.3.2",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
